# oreum_core

./: .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.md  LICENSE.md  LICENSES_3P.md  LICENSES_THIRD_PARTY.md  Makefile  README.md  condaenv_oreum_core.yml  dev_env_install.sh  oreum_core.code-workspace  pip_install.sh  pip_requirements.txt  post_env_install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/: settings.json
.github/: dependabot.yml  release_note_template.yml
.github/workflows/: black.yml  ci.yml  interrogate.yml  lint.yml  publish.yml  publish_to_test.yml  publish_to_testpypi.yml  rebase_deps.yml  test.yml
dev/: Makefile_osx-64  condaenv_oreum_core_x86.yml
oreum_core/: __init__.py  file_io.py
oreum_core/curate/: __init__.py  data_extractor.py  data_io.py  data_load.py  data_loader.py  data_transform.py  data_transformer.py  io.py  text_clean.py  text_cleaner.py
oreum_core/eda/: __init__.py  calc.py  calcs.py  describe.py  eda_io.py  eda_tools.py  general.py  plot.py  plots.py  utils.py
oreum_core/model/: __init__.py  azid_load.py  base.py  calc.py  describe.py  dist.py  distributions.py  file_io.py  io.py  model_io.py  model_tools.py  plot.py  utils.py
oreum_core/model_pymc/: __init__.py  base.py  calc.py  describe.py  distributions.py  model_io.py  plot.py  pymc_io.py
oreum_core/model_tree/: __init__.py  tree_io.py
oreum_core/model_xgb/: __init__.py  xgb_io.py
oreum_core/store/: __init__.py
oreum_core/utils/: __init__.py  file_io.py  lowercaser.py  snakey_lowercaser.py
reports/: bandit-report.json  test-report.xml
tests/: test_data_io.py  test_dataset_reshaper.py  test_datatype_converter.py  test_describe.py  test_eda_calc.py  test_eda_io.py  test_eda_plot.py  test_file_io.py  test_pymc_base.py  test_pymc_io.py  test_standardizer.py  test_text_cleaner.py  test_transformer.py  test_tree_io.py
tests/curate/: test_data_io.py  test_dataset_reshaper.py  test_datatype_converter.py  test_standardizer.py  test_text_clean.py  test_transformer.py
tests/eda/: conftest.py  test_calc.py  test_describe.py  test_eda_io.py  test_plot.py
tests/model_pymc/: conftest.py  test_build.py  test_calc.py  test_describe.py  test_idata.py  test_plot.py  test_properties.py  test_pymc_io.py  test_sampling.py
tests/model_tree/: test_tree_io.py
tests/utils/: test_file_io.py  test_snakey_lowercaser.py
