[build-system]
requires = ["flit_core >=3.4, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "oreum_core"
description = "Core tools for use on projects by Oreum Industries"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{ name = "Oreum Industries", email = "info@oreum.io" },]
requires-python = "==3.11.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "csv2md>=1.1.2",
    "fastparquet",  # not available in pandas v2.0 optional deps
    "ftfy>=5.4.1",  # NOTE MacOS has 6.1.1
    "matplotlib>=3.8.0",
    "matplotlib-inline>=0.1.7",  # v0.1.7 seems okay
    "pandas[excel,parquet,plot]>=2.2.0",  # brings many deps see DEPS NOTE
    "patsy>=0.5.6",  # TODO consider using formulae instead
    "scikit-learn>=1.4.0",
    "seaborn==0.12.2",  # 0.13 brings many breaking changes to avoid right now
    "statsmodels>=0.14.0",
    "umap-learn",
]

[project.optional-dependencies]
all = ["oreum_core[dev,pymc,tree]"]
dev = [
    "bandit",
    "black",
    "flake8",
    "hypothesis",
    "interrogate",
    "ipython",
    "isort",
    "pipdeptree",
    "pip-licenses",
    "pre-commit",
    "pytest",
]
pymc = [
    "graphviz<=0.18",  # NOTE capped https://stackoverflow.com/a/69997168/4473230
    "pymc==5.16.*",  # latest as-at 2024-08-04, brings many deps see DEPS NOTE
]
tree = [
    "catboost",  # beats xgboost often, ref: https://arxiv.org/pdf/2305.02997.pdf
    "category_encoders>=2.6.3",  # brings many deps see DEPS NOTE
    "graphviz<=0.18",  # NOTE capped https://stackoverflow.com/a/69997168/4473230
    "optuna>=3.4.0",  # brings many deps see DEPS NOTE
    "nbformat",
    "shap<0.45.0",  # plotting seems broken in 0.45, to investigate and resolve
    "xgboost>=2.0.2",
]
# DEPS NOTE
# + category_encoders: brings packages incl. statsmodels and patsy
# + pandas: added minimal optional deps. importing projects might also consider
#     including pandas[performance,postgresql]>=2.0.0
# + pymc: brings packages incl.: arviz (xarray), numpy, pandas, pytensor, scipy, tables
# + optuna:  brings numpy==1.26.2 which may clash with 1.4.2 as required by MKL see conda.yml
#     also brings sqlalchemy, optionally manually add plotly

[project.urls]
"Homepage" = "https://github.com/oreum-industries/oreum_core"

# [bdist_wheel]
# universal=1

[tool.bandit]
skips = [
    "B101",  # skip asserts
    "B404",
    "B603",
    "B607",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true
skip-magic-trailing-comma = true
include = '\.py$'
extend-exclude = """/(__pycache__)/"""
# check = true # diff = true  # allow for different calls to use this
color = true
fast = false
verbose = true

[tool.isort]
profile = 'black'
multi_line_output = 3
skip_gitignore = true
py_version = 311

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true  # doesnt work with precommit see https://github.com/econchick/interrogate/issues/100
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["assets", "dev", "dist"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "assets/img/"
badge-format = "svg"
badge-style = "flat"

[tool.flit.module]
name = "oreum_core"

[tool.setuptools.dynamic]
version = {attr = "oreum_core.__version__"}
