[build-system]
requires = ["flit_core >=3.4, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "oreum_core"
description = "Core tools for use on projects by Oreum Industries"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{ name = "Oreum Industries", email = "info@oreum.io" },]
requires-python = "==3.12.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "csv2md>=1.1.2",
    "dask",
    "fastparquet",  # not available in pandas v2.0 optional deps
    "ftfy>=5.4.1",  # NOTE MacOS has 6.3.1
    "matplotlib>=3.10.0",  # v3.8.0
    "matplotlib-inline>=0.1.7",  # v0.1.7 seems okay
    "pandas[excel,parquet,plot]>=2.2.0",  # brings many deps see DEPS NOTE
    "patsy>=1.0.1",  # TODO consider using formulae instead  v0.5.6
    "scikit-learn>=1.6.0",
    "seaborn<0.14", # 0.14 likely to break many plots, approach with caution
    "statsmodels>=0.14.0",
    "umap-learn",
]

[project.optional-dependencies]
all = ["oreum_core[dev,pymc,tree]"]
dev = [
    "bandit",
    "hypothesis",
    "interrogate",
    "ipython",
    "pipdeptree",
    "pip-licenses",
    "pooch",  # for scipy.test
    "pre-commit",
    "pytest",
    "ruff",
]
pymc = [
    "graphviz<=0.18",  # NOTE capped https://stackoverflow.com/a/69997168/4473230
    "pymc==5.20.*",  # latest as-at 2025-01-24, brings many deps see DEPS NOTE
]
tree = [
    "catboost",  # beats xgboost often, ref: https://arxiv.org/pdf/2305.02997.pdf
    "category_encoders>=2.8.0",  # brings many deps see DEPS NOTE
    "graphviz<=0.18",  # NOTE capped https://stackoverflow.com/a/69997168/4473230
    "optuna>=4.2.0",  # brings many deps see DEPS NOTE
    "optuna-integration",
    "nbformat",
    "shap",  # plotting seems broken in >=0.45, to investigate and resolve
    "xgboost",
]
# DEPS NOTE
# + category_encoders: brings packages incl. statsmodels and patsy
# + pandas: added minimal optional deps. importing projects might also consider
#     including pandas[performance,postgresql]>=2.0.0
# + pymc: brings packages incl.: arviz (xarray), numpy, pandas, pytensor, scipy, tables
# + optuna:  brings latest numpy and sqlalchemy, optionally manually add plotly

[project.urls]
"Homepage" = "https://github.com/oreum-industries/oreum_core"

# [bdist_wheel]
# universal=1

[tool.bandit]
skips = [
    "B101",  # skip asserts
    "B404",
    "B603",
    "B607",
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true  # doesnt work with precommit see https://github.com/econchick/interrogate/issues/100
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["assets", "dev", "dist"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "assets/img/"
badge-format = "svg"
badge-style = "flat"

[tool.flit.module]
name = "oreum_core"

[tool.ruff]  # settings: https://docs.astral.sh/ruff/settings/
indent-width = 4
line-length = 88
target-version = "py312"
extend-exclude = [
    "__pycache__",
    "build",
    "dev",
    "lib",
    "lib64",
    "sdist",
    "var",
    "wheels",
]

[tool.ruff.lint]
# fixable = ["ALL"]  # allow fix for all enabled rules (when `--fix`) provided
unfixable = ["B"]
# allow unused underscore-prefix vars
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "B9", # legacy from .flake8 config
]
ignore = [
    "B026",  # let me do star unpacking
    "C405",  # let me use set()
    "C408",  # let me use dict()
    "C416",  # let me use list comprehensions
    "C419",  # let me use list comprehensions
    "C901",  # too complex
    "E203",  # legacy from .flake8 config
    "E266",  # legacy from .flake8 config
    "E501",  # line too long
    "E712",  # legacy from .flake8 config
    "F401",  # legacy from .flake8 config
    "F403",  # legacy from .flake8 config
    "W291",  # legacy from .flake8 config
    "W293",  # legacy from .flake8 config
    "W605",  # legacy from .flake8 config
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
split-on-trailing-comma=false

[tool.setuptools.dynamic]
version = {attr = "oreum_core.__version__"}
