[build-system]
requires = ["flit_core >=3.4, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "oreum_core"
description = "Core tools for use on projects by Oreum Industries"
version = "0.12.13"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{ name = "Oreum Industries", email = "info@oreum.io" },]
requires-python = "==3.13.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dask",
    "ftfy",
    "matplotlib",
    "numpy>=2.0",
    "pandas[excel,parquet,plot]>=3.0,<4",
    "patsy",  # TODO consider using formulae instead
    "scikit-learn>=1.0",
    "scipy>=1.9",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "genbadge[coverage]",
    "hypothesis",
    "interrogate",
    "ipython",
    "meson",  # used by numpy test (fortran)
    "ninja",  # used by numpy test (fortran)
    "pipdeptree",
    "pip-licenses",
    "pooch",  # for scipy.test
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
pymc = [
    "graphviz",
    "nutpie",
    "pymc",
]
tree = [
    "xgboost",
]
# DEPS NOTE
# + pandas: added minimal optional deps. importing projects might also consider
#     including pandas[performance,postgresql]
# + pymc: brings packages incl.: arviz (xarray), numpy, pandas, pytensor, scipy, tables

[project.urls]
"Homepage" = "https://github.com/oreum-industries/oreum_core"

# [bdist_wheel]
# universal=1

[tool.bandit]
skips = [
    "B101",  # skip asserts
    "B404",
    "B603",
    "B607",
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true  # doesnt work with precommit see https://github.com/econchick/interrogate/issues/100
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["assets", "dev", "dist"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.flit.module]
name = "oreum_core"

[tool.ruff]  # settings: https://docs.astral.sh/ruff/settings/
indent-width = 4
line-length = 88
target-version = "py313"
extend-exclude = [
    "__pycache__",
    "build",
    "dev",
    "lib",
    "lib64",
    "sdist",
    "var",
    "wheels",
]

[tool.ruff.lint]
# fixable = ["ALL"]  # allow fix for all enabled rules (when `--fix`) provided
unfixable = ["B"]
# allow unused underscore-prefix vars
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "B9", # legacy from .flake8 config
]
ignore = [
    "B026",  # let me do star unpacking
    "C405",  # let me use set()
    "C408",  # let me use dict()
    "C416",  # let me use list comprehensions
    "C419",  # let me use list comprehensions
    "C901",  # too complex
    "E203",  # legacy from .flake8 config
    "E266",  # legacy from .flake8 config
    "E501",  # line too long
    "E712",  # legacy from .flake8 config
    "F401",  # legacy from .flake8 config
    "F403",  # legacy from .flake8 config
    "W291",  # legacy from .flake8 config
    "W293",  # legacy from .flake8 config
    "W605",  # legacy from .flake8 config
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
split-on-trailing-comma=false

[tool.coverage.run]
source = ["oreum_core"]
omit = ["*/__init__.py"]
data_file = "reports/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools.dynamic]
version = {attr = "oreum_core.__version__"}
